# Linux-Process_Manager

./: README.md  zombie.rs
processManager/: Cargo.toml
processManager/src/: cli_display.rs  common.rs  ctrlc_handler.rs  display_filtered.rs  filter_gui.rs  filtering.rs  gui_display.rs  handling_filter.rs  input.rs  load_avg.rs  main.rs  process_display.rs  process_tree.rs  syscalls.rs  temp.rs  threshold_monitor.rs  zombie_processes.rs
