[package]
name = "proj"
version = "0.1.0"
edition = "2021"

[dependencies]
procfs = "0.17.0"
sysinfo = "0.22"
systemstat = "0.2.3"
nvml-wrapper = "0.9"
crossterm = "0.27"
"ctrlc" = "3.3"
once_cell = "1.10"
colored = "2.0"
prettytable = "0.10"
libc = "0.2"
tui = { version = "0.19.0", default-features = false, features = ['termion'] }
termion = "1.5"